[Bug] Accordion toggles have no spacing now

--- a/assets/scss/shared-ui/_accordions.scss
+++ b/assets/scss/shared-ui/_accordions.scss
@@ -185,6 +185,10 @@
 						.sui-toggle {
 							flex: 0 0 auto;
 							align-items: flex-start;
+
+							+ span {
+								margin-left: #{$sui-gutter-md / 2};
+							}
 						}
 
 						[class*="sui-icon-"] {
